manifest/objects/DMMAX__Namespace__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Label__c</fullName>
        <label>Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Max Namespace</label>
    <nameField>
        <label>Namespace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Namespaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>